[project]
name = "zed"
version = "0.0.0"
dependencies = [
    "ndspy",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]
